Add arguments to raiseNotifications function

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script src="script.js"></script>
 </head>
 <body>
-  <form onSubmit="return raiseNotification()">
+  <form id="notificationForm">
     <label> Title :
       <input type="text" id="notifTitle">
     </label>
